# cmake-package-app

./: .gitignore  CMakeLists.txt  README.md  simple_lib.cpp  simple_lib.hpp
.github/workflows/: cmake.yml
src/: simple_example.cpp
